# gstreamer_opengl

./: .gitignore  CMakeLists.txt  GstOpenGLPlayer.cpp  GstOpenGLPlayer.hpp  gl_utils.cpp  gl_utils.hpp  main.cpp  shader_s.h  textures_combined.cpp
glad/: glad.c
glad/include/glad/: glad.h
plugin/: CMakeLists.txt  gstmyelement.c  gstmyelement_1.c  gstplugin.h
test/: CMakeLists.txt  test_myplugin.cpp
